Move login to layout

--- a/Web-Triolingo/Pages/Shared/Login.cshtml
+++ b/Web-Triolingo/Pages/Shared/Login.cshtml
@@ -1,8 +1,7 @@
-﻿<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#login">Login</button>
+﻿@*<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#login">Login</button>*@
 
 <div class="offcanvas offcanvas-bottom" id="login">
     <div class="offcanvas-header">
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         <button type="button" class="btn btn-outline-primary" id="changeRegis">Đăng kí</button>
         <button type="button" class="btn btn-outline-primary" id="changeLogin">Đăng nhập</button>
     </div>
