--- a/Web-Triolingo/Pages/Shared/_Layout.cshtml
+++ b/Web-Triolingo/Pages/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Triolingo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/Login/Login.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -124,6 +125,7 @@
             </nav>
             <main role="main" class="m-3">
                 @RenderBody()
+                <partial name="Login" model="@Model.User" />
             </main>
         </div>
         <footer class="border-top footer text-muted">
@@ -139,6 +141,7 @@
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/ckeditor5-build-classic/ckeditor.js"></script>
@@ -146,6 +149,7 @@
     <link href="~/lib/fontawesome-free/css/all.css" rel="stylesheet" />
     <link href="~/lib/fontawesome-free/css/all.min.css" rel="stylesheet" />
     <script src="~/lib/fontawesome-free/js/all.js"></script>
+    <script src="~/js/Login/Login.js"></script>
     <script src="~/lib/fontawesome-free/js/all.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
     <script>
