--- a/Web-Triolingo/Pages/Lessons/Index.cshtml
+++ b/Web-Triolingo/Pages/Lessons/Index.cshtml
@@ -6,6 +6,9 @@
     ViewData["Title"] = "Quản lý môn học";
 }
 <h2 class="text-uppercase">Quản lý môn học</h2>
+<form method="post" asp-page-handler="export">
+    <input type="submit" value="Xuất ra excel" class="btn btn-primary text-uppercase" />
+</form>
 <div class="row p-0">
     <div class="col-md-4 col-12">
         <div class="card">
