phan quyen user + add menu

--- a/Web-Triolingo/Pages/Shared/_Layout.cshtml
+++ b/Web-Triolingo/Pages/Shared/_Layout.cshtml
@@ -143,6 +143,7 @@
                 <li data-item="3" class="side-item item3">Schools</li>
                 <li data-item="4" class="side-item item4"><a style="text-decoration: none" asp-page="/Settings/SettingList">Quản lý cài đặt</a></li>
                 <li data-item="5" class="side-item item4"><a style="text-decoration: none" asp-page="/Courses/CourseList">Quản lý khóa học</a></li>
+                <li data-item="6" class="side-item item4"><a style="text-decoration: none" asp-page="/Users/UserControl">Quản lý user</a></li>
             </ul>
         </nav>
         <main role="main" class="m-3">
