--- a/Web-Triolingo/Pages/Settings/SettingList.cshtml
+++ b/Web-Triolingo/Pages/Settings/SettingList.cshtml
@@ -5,9 +5,6 @@
 <h1>Quản lý cài đặt</h1>
 
 <div class="">
-    <form method="post" asp-page-handler="email">
-        <input class="btn btn-primary" value="Send email" type="submit" />
-    </form>
     <a class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#addNew" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
         Thêm mới
     </a>
@@ -197,6 +194,8 @@
 @section scripts{
     <script src="~/js/settings/settings.js"></script>
 }
+<script src="~/js/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/signalr.js"></script>
 @{
     if (ViewData["AddFailed"] != null) {
         <script>
