--- a/Web-Triolingo/Pages/Shared/Login.cshtml
+++ b/Web-Triolingo/Pages/Shared/Login.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <input name="Password" type="password" class="form-control login-input" placeholder="Mật khẩu" />
-                <a class="forgot" href="#">Forgot?</a>
+                @*<a class="forgot" href="#">Forgot?</a>*@
             </div>
             <label class="text-danger">@loginError</label>
             <button class="btn btn-primary submitbtn" id="loginbtn" type="button">Đăng nhập</button>
