--- a/Web-Triolingo/Pages/Index.cshtml
+++ b/Web-Triolingo/Pages/Index.cshtml
@@ -26,8 +26,8 @@
 								@{
 									if (ViewData["courseProgress"] != null && int.TryParse(ViewData["courseProgress"].ToString(), out int progress))
 									{
-										<label class="h3"><b>Status on the course:</b></label>
-										<p id="courseProgressName" style="text-align: left">@ViewData["currentCourseName"]</p>
+										<label class="h3"><b>Quá trình học hiện tại:</b></label>
+										<p id="courseProgressName" style="text-align: left">Khóa: @ViewData["currentCourseName"]</p>
 										<div class="progress" role="progressbar" style="height: 30px" aria-valuemin="0" aria-valuemax="100">
 											<div id="progressBarInside" class="progress-bar progress-bar-striped bg-success progress-bar-animated" style="width: @progress%">@progress%</div>
 										</div>
@@ -43,9 +43,9 @@
 								@{
 									if (ViewData["chartLabel"] != null && ViewData["chartData"] != null)
 									{
-										<p style="">Previous mark:</p>
+										<p style="">Điểm của các bài tập trước:</p>
 										<canvas id="myChart" style="width:100%;max-width:700px"></canvas>
-										<i>Mark based on scale of 10 of each lesson</i>
+										<i>Điểm được tính theo scale 100 điểm</i>
 										<script>
 											const xValues = @Html.Raw(ViewData["chartLabel"].ToString());
 											const yValues = @Html.Raw(ViewData["chartData"].ToString());
@@ -63,7 +63,7 @@
 												options: {
 													legend: { display: false },
 													scales: {
-														yAxes: [{ ticks: { min: 0, max: 10 } }]
+														yAxes: [{ ticks: { min: 0, max: 100 } }]
 													},
 												}
 											});
@@ -71,7 +71,7 @@
 									}
 									else
 									{
-										<h3>You haven't finished any lesson with marks!</h3>
+										<h3>Bạn chưa được chấm điểm bài nào!</h3>
 									}
 								}
 
@@ -82,29 +82,60 @@
 				<div class="col-sm-4">
 					<div class="card">
 						<div class="card-body">
-							<h4><b>Current Units Progress:</b></h4>
-							<ul class="list-group">
-								@{
-									if (ViewData["recentUnit"] != null && ViewData["recentUnitIndex"] != null)
+							<form class="col" method="get" asp-page-handler="course">
+								<h3 for="editor" class="form-label">Khóa học</h3>
+								<select class="form-select" name="id" onchange="$('#saveCourseBtn').click()">
+									@foreach (var cour in Model.Courses)
 									{
-										IEnumerable<string> units = (IEnumerable<string>)ViewData["recentUnit"];
+										if (Model.GetCourse != null && Model.GetCourse.Id == cour.Id)
+										{
+											<option value="@cour.Id" selected>@cour.Name</option>
+										}
+										else
+										{
+											<option value="@cour.Id">@cour.Name</option>
+
+										}
+									}
+								</select>
+								<button type="submit" class="btn btn-primary px-3" hidden id="saveCourseBtn">Lưu</button>
+							</form>
+							<h5><b>Các unit trong khóa:</b></h5>
+							<div class="accordion" id="accordionExample">
+								@{
+									if (ViewData["recentUnit"] != null)
+									{
+										IDictionary<Unit, List<Lesson>> units = (IDictionary< Unit, List < Lesson >>)ViewData["recentUnit"];
 										int studiedIndex = -1;
-										int.TryParse(ViewData["recentUnitIndex"].ToString(), out studiedIndex);
 										for (int i = 0; units != null && i < units.Count(); i++)
 										{
-											if (i > studiedIndex)
-											{
-												<li class="list-group-item">@units.ElementAt(i)</li>
-											}
-											else
-											{
-												<li class="list-group-item"><b>@units.ElementAt(i)</b></li>
-											}
+											<div class="accordion-item">
+												<h2 class="accordion-header" id="heading@(i)">
+													<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse@(i)" aria-expanded="false" aria-controls="collapse@(i)">
+														@units.ElementAt(i).Key.Name
+													</button>
+												</h2>
+												<div id="collapse@(i)" class="accordion-collapse collapse" aria-labelledby="heading@(i)" data-bs-parent="#accordionExample">
+													<ul class="list-group">
+														@foreach (var item in units.ElementAt(i).Value)
+														{
+															if (item.Status > 0)
+															{
+																<li class="list-group-item"><b><a asp-page="/QnA/Index" asp-route-id="@item.Id" class="bg-transparent">@item.Name</a></b></li>
+															}
+															else
+															{
+																<li class="list-group-item"><a asp-page="/QnA/Index" asp-route-id="@item.Id" class="bg-transparent">@item.Name</a></li>
+															}
+														}
+													</ul>
+												</div>
+											</div>
 										}
 									}
 								}
-							</ul>
-							<a asp-page="Courses/CourseList">Go to Course...</a>
+							</div>
+							<a asp-page="Courses/CourseList">Đi tới Course...</a>
 						</div>
 					</div>
 				</div>
