bug siêu to khổng lồ

--- a/Web-Triolingo/Pages/Index.cshtml
+++ b/Web-Triolingo/Pages/Index.cshtml
@@ -45,7 +45,7 @@
 									{
 										<p style="">Điểm của các bài tập trước:</p>
 										<canvas id="myChart" style="width:100%;max-width:700px"></canvas>
-										<i>Điểm được tính theo scale 100 điểm</i>
+										<i>Điểm được tính theo scale 100%</i>
 										<script>
 											const xValues = @Html.Raw(ViewData["chartLabel"].ToString());
 											const yValues = @Html.Raw(ViewData["chartData"].ToString());
