--- a/Web-Triolingo/Pages/Courses/CourseList.cshtml
+++ b/Web-Triolingo/Pages/Courses/CourseList.cshtml
@@ -115,6 +115,27 @@
                     </div>
                 </div>
                 <div class="mb-3 row">
+                    <label for="note" class="col-sm-2 col-form-label">Người hướng dẫn</label>
+                    <div class="col-sm-10">
+                        @if (Model.mentors.Count > 0)
+                        {
+                            <div class="row row-cols-lg-6 row-cols-3 g-2">
+                                @for(var i = 0; i< Model.mentors.Count;i++)
+                                {
+                                    <div class="col">
+                                        <input asp-for="mentors.ElementAt(i).Value" type="checkbox" class="btn-check" name="btnradio" id="btn@(Model.mentors.ElementAt(i).Key.Id)" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="btn@(Model.mentors.ElementAt(i).Key.Id)">@(Model.mentors.ElementAt(i).Key.FullName)</label>
+                                    </div>
+                                }
+                            </div>
+                        }
+                        else
+                        {
+                            <h5>Không có người hướng dẫn </h5>
+                        }
+                    </div>
+                </div>
+                <div class="mb-3 row">
                     <label for="note" class="col-sm-2 col-form-label">Ghi chú</label>
                     <div class="col-sm-10">
                         <textarea class="form-control w-100" id="note" asp-for="course.Note"></textarea>
