--- a/Web-Triolingo/Pages/Users/UserControl.cshtml
+++ b/Web-Triolingo/Pages/Users/UserControl.cshtml
@@ -145,6 +145,16 @@
 			}
 		});
 	}
+
+	function OnShowHidePassword(id) {
+		var ele = document.getElementById(id);
+		if (ele.type === "password") {
+			ele.type = "text";
+		}
+		else {
+			ele.type = "password";
+		}
+	}
 </script>
 <h1 class="mb-3">List of Users</h1>
 <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#createNewUser">
@@ -158,7 +168,6 @@
 				<th>Id</th>
 				<th>Full Name</th>
 				<th>Email</th>
-				<th>Password</th>
 				<th></th>
 			</tr>
 		</thead>
@@ -169,7 +178,6 @@
 					<td>@user.Id</td>
 					<td>@user.FullName</td>
 					<td>@user.Email</td>
-					<td>@user.Password</td>
 					<td>
 						<button type="button" class="btn btn-outline-info m-2" data-bs-toggle="modal" data-bs-target="#ViewModal" onclick="onSwitchView(@user.Id)">Edit</button>
 						<button type="button" class="btn btn-outline-dark m-2" data-bs-toggle="modal" data-bs-target="#roleModal" onclick="GetUserRoles(@user.Id)">Edit Role</button>
@@ -205,7 +213,7 @@ else
 						<div class="input-group mb-3">
 							<div class="input-group mb-3">
 							<span class="input-group-text" id="inputRoleLbl">Role: </span>
-								<select class="form-select" id="roleSettingId" name="roleSettingId" data-val-required="User's role is required." multiple>
+								<select class="form-select" id="roleSettingId" name="roleSettingId" data-val-required="User's role is required.">
 									@{
 										foreach (var role in (IEnumerable<SelectListItem>)Model._cacheRoles)
 										{
@@ -232,8 +240,9 @@ else
 					</div>
 					<div class="input-group mb-3">
 						<span class="input-group-text" id="inputPassword">Password: </span>
-						<input required type="text" name="user.Password" class="form-control" aria-describedby="inputPassword">
+						<input id="input_password1" required type="password" name="user.Password" class="form-control" aria-describedby="inputPassword">
 					</div>
+					<input class="form-check-input p-2" type="checkbox" onclick="OnShowHidePassword('input_password1');"> Show Password
 					<input type="hidden" name="user.Status" value="1" />
 					<div>
 						<span>Note: </span>
@@ -268,8 +277,9 @@ else
 					</div>
 					<div class="input-group mb-3">
 						<span class="input-group-text" id="inputPassword">Password: </span>
-						<input id="editInfoPassword" required type="text" name="user.Password" class="form-control" aria-describedby="inputPassword">
+						<input id="editInfoPassword" required type="password" name="user.Password" class="form-control" aria-describedby="inputPassword">
 					</div>
+					<input class="form-check-input" type="checkbox" onclick="OnShowHidePassword('editInfoPassword');"> Show Password
 					<input id="editInfoStatus" type="hidden" name="user.Status" value="1" />
 					<div>
 						<span>Note: </span>
