--- a/Web-Triolingo/Pages/Courses/CourseList.cshtml
+++ b/Web-Triolingo/Pages/Courses/CourseList.cshtml
@@ -117,14 +117,14 @@
                 <div class="mb-3 row">
                     <label for="note" class="col-sm-2 col-form-label">Người hướng dẫn</label>
                     <div class="col-sm-10">
-                        @if (Model.mentors.Count > 0)
+                        @if (Model.users.Count > 0)
                         {
                             <div class="row row-cols-lg-6 row-cols-3 g-2">
-                                @for(var i = 0; i< Model.mentors.Count;i++)
+                                @for (var i = 0; i < Model.users.Count; i++)
                                 {
                                     <div class="col">
-                                        <input asp-for="mentors.ElementAt(i).Value" type="checkbox" class="btn-check" name="btnradio" id="btn@(Model.mentors.ElementAt(i).Key.Id)" autocomplete="off">
-                                        <label class="btn btn-outline-primary" for="btn@(Model.mentors.ElementAt(i).Key.Id)">@(Model.mentors.ElementAt(i).Key.FullName)</label>
+                                        <input asp-for="isMentors[i]" type="checkbox" class="btn-check" name="btnradio" id="btn@(Model.users[i].Id)" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="btn@(Model.users[i].Id)">@(Model.users[i].FullName)</label>
                                     </div>
                                 }
                             </div>
